fix: corrections to alignment

--- a/src/app/components/card-one/card-one.component.css
+++ b/src/app/components/card-one/card-one.component.css
@@ -8,7 +8,7 @@
   background-color: #000;
   width: 89.9vw;
   height: 64.5vh;
-  margin-left: 4.2vw;
+  left: 2.67rem;
 }
 
 .card-one p {
