--- a/src/app/components/card-two/card-two.component.css
+++ b/src/app/components/card-two/card-two.component.css
@@ -8,7 +8,7 @@
   background-color: #000;
   width: 89.9vw;
   height: 37.9vh;
-  margin-left: 4.2vw;
+  left: 2.67rem;
 }
 
 .card-two p {
