--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,3 +1,4 @@
+
 header {
  position: fixed;
  z-index: 1;
@@ -22,7 +23,7 @@ header {
 
 .menu {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .menu-li {
